--- a/Honcizek/Views/Administrador/Clientes/Create.cshtml
+++ b/Honcizek/Views/Administrador/Clientes/Create.cshtml
@@ -16,7 +16,10 @@
                 <div class="form-group col-4">
                     <label asp-for="Login" class="control-label"></label>
                     <input asp-for="Login" class="form-control" />
-                    
+                    @if ((bool)ViewData["login-error"])
+                    {
+                        <span class="text-danger" id="login-error">Parece que ese nombre de usuario ya existe..</span>
+                    }
                 </div>
                 <div class="form-group col-4">
                     <label asp-for="Clave" class="control-label"></label>
