--- a/Honcizek/Views/Administrador/Clientes/Edit.cshtml
+++ b/Honcizek/Views/Administrador/Clientes/Edit.cshtml
@@ -17,7 +17,10 @@
                 <div class="form-group col-4">
                     <label asp-for="Login" class="control-label"></label>
                     <input asp-for="Login" class="form-control" />
-                    <span asp-validation-for="Login" class="text-danger"></span>
+                    @if ((bool)ViewData["login-error"])
+                    {
+                        <span class="text-danger" id="login-error">Parece que ese nombre de usuario ya existe..</span>
+                    }
                 </div>
                 <div class="form-group col-4">
                     <label asp-for="Clave" class="control-label">Contrase&ntilde;a s&oacute;lo si cambia</label>
