--- a/Honcizek/Views/Administrador/Trabajadores/Edit.cshtml
+++ b/Honcizek/Views/Administrador/Trabajadores/Edit.cshtml
@@ -9,36 +9,45 @@
 <h4>Usuarios</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-12">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="Nombre" class="control-label"></label>
-                <input asp-for="Nombre" class="form-control" />
-                <span asp-validation-for="Nombre" class="text-danger"></span>
+            <input type="hidden" asp-for="Clave" />
+            <div class="row col-12">
+
+                <div class="form-group col-4">
+                    <label asp-for="Login" class="control-label"></label>
+                    <input asp-for="Login" class="form-control" />
+                    @if ((bool)ViewData["login-error"])
+                    {
+                        <span class="text-danger" id="login-error">Parece que ese nombre de usuario ya existe..</span>
+                    }
+                </div>
+                <div class="form-group col-4">
+                    <label asp-for="Email" class="control-label"></label>
+                    <input asp-for="Email" class="form-control" />
+                    <span asp-validation-for="Email" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Apellidos" class="control-label"></label>
-                <input asp-for="Apellidos" class="form-control" />
-                <span asp-validation-for="Apellidos" class="text-danger"></span>
+            <div class="row col-12">
+
+                <div class="form-group col-4">
+                    <label asp-for="Nombre" class="control-label"></label>
+                    <input asp-for="Nombre" class="form-control" />
+                    <span asp-validation-for="Nombre" class="text-danger"></span>
+                </div>
+                <div class="form-group col-4">
+                    <label asp-for="Apellidos" class="control-label"></label>
+                    <input asp-for="Apellidos" class="form-control" />
+                    <span asp-validation-for="Apellidos" class="text-danger"></span>
+                </div>            
+                <div class="form-group col-4">
+                    <label asp-for="Puesto" class="control-label"></label>
+                    <select asp-for="Puesto" class="form-control" asp-items="ViewBag.Puesto"></select>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Clave" class="control-label"></label>
-                <input asp-for="Clave" class="form-control" />
-                <span asp-validation-for="Clave" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Puesto" class="control-label"></label>
-                <input asp-for="Puesto" class="form-control" />
-                <span asp-validation-for="Puesto" class="text-danger"></span>
-            </div>
-             <div class="form-group pl-3">
+            <div class="form-group pl-3">
                 <input type="submit" value="Guardar" class="btn btn-info" />
             </div>
         </form>
